--- a/meetingRoom/src/index.html
+++ b/meetingRoom/src/index.html
@@ -1,13 +1,26 @@
-<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>MeetingRoom</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+
+  <head>
+    <meta charset="utf-8">
+    <title>Meeting Room</title>
+    <base href="/">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  </head>
+
+  <body>
+    <div ng-app="myApp">
+  		<div class="col-sm-5 next">
+  			<h1>Prochaines Reunions:</h1>
+          <hr>
+    			<h1 class='texte'>Florent DUBOIS : 10h00</h1>
+    			<h1 class='texte'>Vincent CORDINA : 11h00</h1>
+    			<h1 class='texte'>Marc CARRE : 14h00</h1>
+    			<h1 class='texte'>Simon NICOLAI : 15h00</h1>
+  		</div>
+        <app-root></app-root>
+  	</div>
+  </body>
+
 </html>
