clean meeting _oom.html

--- a/stylesheet/meeting_room.html
+++ b/stylesheet/meeting_room.html
@@ -41,7 +41,7 @@
       <hr>
       <br>
       <br>
-      <h1 id="code_reunion" class='texte2' onclick="innerHTML = 'Bonne Réunion'"> 4476</h1>
+      <h1 id="code_reunion" class='texte2' ></h1>
 	  <br>
 	  <h1 id="retour"></h1>
     </div>
